# construction-ai-core

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  construction-ai-platform.html  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  desktop-build.yml  docker-build.yml  helm-lint.yml  release.yml
agents/: __init__.py  analyst.py  author.py  base.py  calculator.py  critic.py  formatter.py  legal_expert.py  researcher.py  verifier.py
agents/researcher/: __init__.py  agent.py  confidence.py  config.py  domain.py  errors.py  fact_validator.py  initializer.py  llm_client.py  prompt_builder.py  security.py  source_collector.py  source_components.py
agents/tests/: test_agents.py
api/: deps.py  main.py  metrics.py  middleware.py  models.py  security.py
api/routes/: analytics.py  analyze.py  auth.py  billing.py  branding.py  chat.py  compliance.py  generate.py  health.py  isup.py  linking.py  projects.py  rag.py  research.py  sign.py  web.py  web_push.py
config/: orchestrator.json  settings.py
core/: billing.py  branding.py  cache.py  database.py  document_diff.py  docx_generator.py  errors.py  llm_router.py  multitenancy.py  orchestrator.py  pdf_exporter.py  pdf_parser.py  projects.py  rag_engine.py  session_bridge.py  session_memory.py  tk_bridge.py
core/analytics/: __init__.py  notifications.py  schedule_predictor.py
core/compliance/: __init__.py  gsn_checklist.py
core/export/: __init__.py  onec_exporter.py
core/integrations/: __init__.py  isup.py
core/pipelines/: chat_rag.py
core/tools/: base.py  web_search.py
deploy/: docker-compose.prod.yml
desktop/: .eslintrc.cjs  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json
desktop/src/: App.tsx  router.tsx
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/permissions/: default.toml
desktop/src-tauri/permissions/commands/: copy_last_log_lines.toml  get_api_url.toml  get_app_version.toml  open_logs_folder.toml  pick_pdf_file.toml  read_pdf_file_bytes.toml  set_api_url.toml
desktop/src-tauri/src/: main.rs
docs/: architecture.md  ci.md  errors.md  researcher_security.md
helm/construction-ai/: Chart.yaml  values.ci.yaml  values.yaml
jose/: __init__.py  jwt.py
migrations/: env.py  script.py.mako
migrations/versions/: 20260416_add_sign_fields.py  20260416_create_isup_submissions.py  20260417_add_org_branding.py  20260417_add_org_id.py  (+3 more)
monitoring/: grafana_dashboard.json  prometheus.yml
passlib/: __init__.py  context.py
schemas/: __init__.py  research.py
scripts/: alembic_schema_check.py  backup.sh  deploy.sh  generate_ks_template.py  generate_templates.py  ingest_docs.py  norm_catalog.py  rates_catalog.py  setup_cron.sh
telegram/: README.md  bot.py  handlers.py  keyboards.py  main.py  states.py
templates/: README.md  exec_album_cover.html  gsn_checklist.html  tk_template.docx
tests/: __init__.py  conftest.py  test_agent_prompt_pipeline.py  test_analytics.py  test_analytics_dashboard.py  test_analyze_tender.py  test_auth.py  test_billing.py  test_branding.py  test_cache.py  test_calculator_rates.py  test_chat_rag.py  test_compliance.py  test_cors.py  test_document_diff.py  test_docx_generator.py  test_export.py  test_generate.py  test_generate_endpoints.py  test_generate_ks.py  test_generate_letter.py  test_generate_sse.py  test_generate_tk.py  test_health.py  test_isup.py  test_isup_auth.py  test_isup_callback.py  test_linking_notifications.py  test_llm_router.py  test_middleware.py  test_multitenancy.py  test_orchestrator.py  test_orchestrator_config.py  test_pdf_exporter.py  test_pdf_parser.py  test_pipeline_integration.py  test_projects.py  test_push.py  test_rag.py  test_rag_engine.py  (+10 more)
web/: app.js  index.html  manifest.json  styles.css  sw.js
(+77 files in other folders)
