[project]
name = "construction-ai-core"
version = "0.5.0"
description = "Универсальный ИИ-помощник для строительной отрасли: инженер ПТО, прораб, тендерный специалист"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ivan Petrov" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "httpx>=0.27.0",
    "aiogram>=3.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "docxtpl>=0.18.0",
    "python-docx>=1.1.0",
    "docx2pdf>=0.1.8",
    "weasyprint>=62.0",
    "pdfplumber>=0.11.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "aiosqlite>=0.20.0",
    "slowapi>=0.1.9",
    "structlog>=24.0.0",
    "tqdm>=4.66.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "bcrypt>=4.1.0",
    "redis[hiredis]>=5.0",
    "sqlalchemy>=2.0.0",
    "boto3>=1.34.0",
    "apscheduler>=3.10.4",
    "pywebpush>=2.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.1",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "pre-commit==4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
