[package]
name = "construction_ai_desktop"
version = "0.1.0"
description = "Construction AI desktop client"
authors = ["Construction AI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-store = "2.0.0"
thiserror = "2"
rfd = "0.15"
dirs = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
